# ChangeLog for media-fonts/liberation-fonts
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/liberation-fonts/ChangeLog,v 1.23 2011/11/06 23:30:22 ranger Exp $

  06 Nov 2011; Brent Baude <ranger@gentoo.org>
  liberation-fonts-1.07.0-r2.ebuild:
  Marking liberation-fonts-1.07.0-r2 ppc for bug 386887

  23 Oct 2011; Raúl Porcel <armin76@gentoo.org>
  liberation-fonts-1.07.0-r2.ebuild:
  alpha/ia64/sparc stable wrt #386887

  14 Oct 2011; Markos Chandras <hwoarang@gentoo.org>
  liberation-fonts-1.07.0-r2.ebuild:
  Stable on amd64 wrt bug #386887

  13 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  liberation-fonts-1.07.0-r2.ebuild:
  x86 stable wrt bug #386887

*liberation-fonts-1.07.1 (12 Oct 2011)

  12 Oct 2011; Peter Volkov <pva@gentoo.org> +liberation-fonts-1.07.1.ebuild:
  Version bump, bug #385185 wrt Hans.

*liberation-fonts-1.07.0-r2 (11 Sep 2011)

  11 Sep 2011; Peter Volkov <pva@gentoo.org>
  -liberation-fonts-1.07.0-r1.ebuild, +liberation-fonts-1.07.0-r2.ebuild:
  Fixed installation with USE=-fontforge now too, again bug #379505 wrt Nikolay
  S. Rybaloff

*liberation-fonts-1.07.0-r1 (09 Sep 2011)

  09 Sep 2011; Peter Volkov <pva@gentoo.org> liberation-fonts-1.07.0.ebuild,
  +liberation-fonts-1.07.0-r1.ebuild:
  Fixed installation with USE=fontforge, bug #379505 thank Nikolay S. Rybaloff
  for report and fix.

  07 Sep 2011; Jeff Gardner <je_fro@gentoo.org> liberation-fonts-1.07.0.ebuild:
  Add unzip to DEPEND fixing bug #380051 thanks to g0del.

*liberation-fonts-1.07.0 (16 Aug 2011)

  16 Aug 2011; Jeff Gardner <je_fro@gentoo.org>
  +liberation-fonts-1.07.0.ebuild:
  New version, thanks to Hans in #377165

*liberation-fonts-1.06.0.20100721-r1 (03 May 2011)

  03 May 2011; Jeff Gardner <je_fro@gentoo.org> files/60-liberation.conf,
  -liberation-fonts-1.06.0.20100721.ebuild,
  +liberation-fonts-1.06.0.20100721-r1.ebuild: