@@ -1,18 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 60-liberation.conf 1055 RMD160 a30ef73e7104e4774394521e279216cc27b7c532 SHA1 f43ecd690b38d2f499c2b823d106ba0a9c493b02 SHA256 6a23965767bf2eb67b3669632ee8b0eee20caccf85fb60cfab18f018bfa88d06
-DIST liberation-fonts-1.04.tar.gz 1011820 RMD160 25fb4ec3b395ff028bc265fb79bbb42338e7051f SHA1 097882c92e3260742a3dc3bf033792120d8635a3 SHA256 0e0d0957c85b758561a3d4aef4ebcd2c39959e5328429d96ae106249d83531a1
-DIST liberation-fonts-1.05.tar.gz 2254706 RMD160 43fb3b59453f17b3e4c8c650605a03a08612b73a SHA1 ca2b74ae00e6dc8cefba6af5bc42495950196979 SHA256 b3edba850862e36484eae374edabd0cab428ca63626f997f3e830b78d36fb864
-DIST liberation-fonts-1.06.0.20100721.tar.gz 2910127 RMD160 43b211f0dca402985cf810cac83b61c06c5b1c5a SHA1 ab95137a012fa63541a54dba0b73ce319d95b86c SHA256 a203ddc8adb76feac57a2a5a8ad3a870a97311d400a95ac2eef60cce42f0009e
 DIST liberation-fonts-1.07.0.tar.gz 2914542 RMD160 f21d5207365702aac66b777c60f90e63ecfdd3e2 SHA1 21e05b203bd9a44bf1f4494507acfdf5354f24bd SHA256 a3a27e2d8820b1d68354eb44967e190cdb25e84dd260d10ac8c5c8556dc21140
 DIST liberation-fonts-1.07.1.tar.gz 2914721 RMD160 8e7dfed2f07759a6c991c2a062ff4269aa88fcf1 SHA1 baa436809d5c096276779292f3f6f098fbcfc164 SHA256 8b96e80fe3f876e6ce73794f6e5492ff8cca900970e584c38314801a02f321a8
-DIST liberation-fonts-ttf-1.05.zip 1027612 RMD160 0c36c85234a4917c05affa8368ede07413524f22 SHA1 13a438f7279791108b2f957cebe02d734457b2f8 SHA256 ec6292f9ca9a3e9bb57c810cf1d7150c9cd14083eb0820119885c52820f78420
-DIST liberation-fonts-ttf-1.06.0.20100721.tar.gz 1324547 RMD160 4ff48c470d788e0fccdd9b8c3acdb66b73fcf546 SHA1 e36555ed4e13a8109bfdb5a8c621de6d581f5ab7 SHA256 9cdea85d1ee40160cf48fc482fbd9038b07b47d909f2091039338d39b0bb7d2f
 DIST liberation-fonts-ttf-1.07.0.tar.gz 1326750 RMD160 18b8a71af004b453d87c678f3c6e5cd33c3eda13 SHA1 c228c05fa6cb8a899e70514bb3764cd21df6de98 SHA256 70d6acc0de062f65af672da109aa70c9777ea902f460fe3c35f753f394d58cb2
 DIST liberation-fonts-ttf-1.07.1.tar.gz 1326668 RMD160 d4dd5ad660ba5747de8e65892583427014aebaa2 SHA1 935bf5d6748b465d2d540884af67fb5dfd59fc4a SHA256 de646f7dc38ce0941247ba694a1a8372e0b7c2d79478e1ec83b67ac8d0e92d48
-EBUILD liberation-fonts-1.04.ebuild 688 RMD160 9078b88140139608f8d847ddce5170ec09e93f9b SHA1 f5e0c50b54dd8bb77c8c91e5d002febf6f09f710 SHA256 724e045041e38119b1c11fa03c6e8391f469eb73f50c2934e34a99fed4d20e5c
-EBUILD liberation-fonts-1.05.ebuild 904 RMD160 9e8eb64fc4edc719c9e5851cc0462592d6c73136 SHA1 fcff88091d36d0b57965bbcc1b5eb3f1754e9633 SHA256 bc3be7158f62e79893062d50fe9e520c5ea6ccff60e6f7721e4258ff1925b0f0
-EBUILD liberation-fonts-1.06.0.20100721-r1.ebuild 971 RMD160 6628d7100676fa202beb71a5ac14cb49ee804f32 SHA1 3f3c7656adde9fe8191579a03b1092b34c3fee8b SHA256 cb3bccbe252b07b1bc6a11d7f28a15711eb39d3438c3ae7f1592bc8110b6727f
-EBUILD liberation-fonts-1.07.0-r2.ebuild 823 RMD160 82a50fc65fa74e054b867736c76fadbc05e51ae7 SHA1 f4008f6804d39b44cb214cde3c05eeb61adefa7f SHA256 2b4cb9d01f8665338c8c360f2fa8a2e5c3194b3a3598b9321274e473209bac7c
-EBUILD liberation-fonts-1.07.0.ebuild 786 RMD160 ec3b80dc20a1b7d88f8da1e3344c1a55ff22e808 SHA1 e7f185f1b37c203d5dd8dd45e78aec604292f903 SHA256 74186e8644cc63a86fbfe62edd011bc14256ef7d17ab928b51cae44f3e01ffe7
+EBUILD liberation-fonts-1.07.0-r2.ebuild 822 RMD160 e148039d33faada309b78d7a9bce4bc8e0f78874 SHA1 5453736192212fb355e8173c5099755912aecd2c SHA256 b86a4ea03ac947e9b11135ce409970634e3c2cedbcdece049c77773ab1b2d494
 EBUILD liberation-fonts-1.07.1.ebuild 829 RMD160 b8faa622f9bf2316444b22a88e07a58d1452253d SHA1 e9410aa558b8b53da8fabb1140e5d78923652638 SHA256 0dbf1a87242663d060e090b4afe2abcb15de092a9e53eff74203eb86497463ca
-MISC ChangeLog 5842 RMD160 cbf9d0103e2ba18d8e1a7a819ef99105f4fa8a23 SHA1 298297ac6a07b128706673f63dfdbbb94af25452 SHA256 dd6a801f7e24cca20df1c4664db4f9b82d406fece35ce4a6c2465c21c4e8c8d1
+MISC ChangeLog 6120 RMD160 beed1520818caf9b81e306473af16cb04bd160a8 SHA1 c727a69e02fc6d7d4322687b7a475a07bf53647e SHA256 2e28594776a7bef3606707cb81265723876ba438c814cfc0496ebeb3601beb50
 MISC metadata.xml 466 RMD160 4a596d73eee7776ae2fdc53fe3e9bbb1e8710c76 SHA1 080346b810e280957a719cff5f00edf6031294d5 SHA256 ca7559a2f0fdc9cc477adfdbbf73c787439bf0ebfd3c60f049a5c3596cbd5165
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iEYEARECAAYFAk8JLo4ACgkQiqiDRvmkBmLOoACg045Uqbh4u4znvXPQchLdCu0x
+Ad4AoO2bAh2ZjTaihYtk0EchGJpSQA2L
+=eklB
+-----END PGP SIGNATURE-----
